<resources>
    <string name="app_name">Drawing App</string>
    <string name="mobile_moguls_drawing_app">Shape Drawing App</string>
    <string name="check_out_the_art_gallery">Art Gallery</string>
    <string name="start_drawing">New Drawing</string>
    <string name="mobile_moguls_2024_v_0_0_15">© Mobile Moguls 2024 - V.1.0.0</string>
    <string name="mobile_moguls_company_logo">Mobile Moguls Company Logo</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="brush_size">Brush Size:</string>
    <string name="pen_size">Pen Size</string>
    <string name="pen_shape">Pen Shape</string>
    <string name="circle">Circle</string>
    <string name="small_shape">Small</string>
    <string name="medium_shape">Medium</string>
    <string name="large_shape">Large</string>
    <string name="oval">Oval</string>
    <string name="square">Square</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="save_screen">Save Screen</string>
    <string name="image_preview">Image Preview</string>
    <string name="go_to_draw_screen">Back to Drawing</string>
    <string name="go_to_art_gallery">Go to Art Gallery</string>
    <string name="file_name">File Name</string>
    <string name="save_drawing">Save Drawing</string>
    <string name="save_to_cloud">Save to Cloud</string>
    <string name="save_to_local" />
    <string name="save_to_device">Save to Device</string>
    <string name="extra_tools">Extra Tools:</string>
    <string name="blur">Blur</string>
    <string name="invert">Invert</string>
    <string name="new_drawing">New Drawing</string>
    <string name="mobile_mogul_s">Mobile Mogul\'s</string>
    <string name="tycoons_of_devices">tycoons of devices</string>
    <string name="canvas_matt">canvas matt</string>
    <string name="drawing_1">drawing_1</string>
    <string name="drawing_2">drawing_1</string>
    <string name="drawing_3">drawing_1</string>
    <string name="drawing_4">drawing_1</string>
    <string name="drawing_5">drawing_1</string>
    <string name="mobile_app_programming">mobile app programming</string>
</resources>